data/derived/fa15/progs/unify/prog0570.ml.out
Characters 85-86:
  let f' x = if (f x) = b then (f x) else f (x+1) in wwhile (f' ,b);;
                                                                 ^
Error: This expression has type int * bool
       but an expression was expected of type int
